--- a/Frontend/src/assets/css/CollagePhoto.css
+++ b/Frontend/src/assets/css/CollagePhoto.css
@@ -2,7 +2,6 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    display: flex;
     user-select: none;
 }
 
@@ -73,8 +72,7 @@ body {
     align-items: center;
     justify-content: center;
     font-size: 0.9rem;
-    color: #555;
-    background: #555;
+    background: #DDDDDD;
     position: relative;
 }
 
@@ -85,7 +83,7 @@ body {
     grid-column: 1 / 1;
     grid-row: 1 / 3;
     color: #555;
-    background: #555;
+    background: #DDDDDD;
     position: relative;
 }
 
@@ -156,9 +154,10 @@ body {
     border-color: rgba(0, 0, 0, .05);
     color: #fff;
     background: #49484A;
-    height: 50px;
-    width: 170px;
+    height: 40px;
+    width: 50px;
     margin-top: .5rem;
+    border-radius: 10px;
 }
 
 #addTextBtn:hover {
@@ -181,16 +180,17 @@ body {
     font-size: 1.4rem;
     position: absolute;
     right: 0;
-    left: 60%;
-    top: 89%;
+    left: 76%;
+    top: 41%;
     color: #FF0000;
     display: none;
     cursor: pointer;
 }
+
 .text-box {
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 30%;
     transform: translate(-50%, -50%);
     font-size: 24px;
     cursor: move;
@@ -254,6 +254,7 @@ body {
     display: inline-block;
     color: #212529;
     border: 1px solid #212529;
+    height: 2rem;
 }
 
 .size-btn.active {
@@ -302,7 +303,8 @@ body {
     padding: 10px 20px;
     cursor: pointer;
 }
-.share{
+
+.share {
     display: none;
     background: #012e43;
     font-size: 20px;
@@ -311,4 +313,13 @@ body {
 
 #fontStyleSelect {
     display: none;
+}
+
+
+.main-content {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 5%;
+    align-items: center;
 }
