--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -7,6 +7,9 @@ body {
   user-select: none;
   font-family: "Poppins", sans-serif;
 }
+.hidden {
+  display: none !important;
+}
 
 /*
 .container {
