--- a/Frontend/src/assets/css/AcrylicClock.css
+++ b/Frontend/src/assets/css/AcrylicClock.css
@@ -109,8 +109,15 @@
 }
 
 .share{
-    /* display: none; */
+    display: none;
     background: #012e43;
+    font-size: 20px;
+    border: 1px solid #f0f0f0;
+}
+
+.add-to-cart {
+    display: none;
+    background: #026593;
     font-size: 20px;
     border: 1px solid #f0f0f0;
 }
