--- a/Frontend/src/assets/css/ClearAcrylic.css
+++ b/Frontend/src/assets/css/ClearAcrylic.css
@@ -142,7 +142,12 @@
     font-size: 20px;
     border: 1px solid #f0f0f0;
 }
-
+.acp-add-to-cart {
+    display: none;
+    background: #026593;
+    font-size: 20px;
+    border: 1px solid #f0f0f0;
+}
 .acp-download:hover {
     background: #f0f0f0;
     font-size: 20px;
