--- a/Frontend/src/assets/css/AcrylicClock.css
+++ b/Frontend/src/assets/css/AcrylicClock.css
@@ -191,8 +191,8 @@
 
 .circle-shape {
     border-radius: 50%;
-    width: 400px;
-    height: 400px;
+    /* width: 400px;
+    height: 400px; */
 }
 
 .square-shape {
