--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -7,8 +7,23 @@ body {
   user-select: none;
   font-family: "Poppins", sans-serif;
 }
+
 .hidden {
   display: none !important;
+}
+
+.spin {
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 /*
