--- a/Frontend/src/assets/css/ClearAcrylic.css
+++ b/Frontend/src/assets/css/ClearAcrylic.css
@@ -101,6 +101,10 @@
     transform: scale(1.1);
 }
 
+.acp-color-btn.acp-active {
+    transform: scale(1.5);
+}
+
 .acp-controls {
     display: flex;
     gap: 10px;
@@ -142,12 +146,14 @@
     font-size: 20px;
     border: 1px solid #f0f0f0;
 }
+
 .acp-add-to-cart {
     display: none;
     background: #026593;
     font-size: 20px;
     border: 1px solid #f0f0f0;
 }
+
 .acp-download:hover {
     background: #f0f0f0;
     font-size: 20px;
@@ -180,7 +186,7 @@
     transform: translateY(-50%) rotate(-90deg);
 }
 
-.acp-size-btn.active {
+.acp-size-btn.acp-active {
     background-color: #03A9F4;
     font-weight: bold;
     color: #f0f0f0;
