--- a/Frontend/src/assets/css/ClearAcrylic.css
+++ b/Frontend/src/assets/css/ClearAcrylic.css
@@ -40,6 +40,7 @@
 }
 
 .acp-image-container {
+    margin-top: 1rem;
     width: 400px;
     height: 550px;
     position: relative;
@@ -95,6 +96,7 @@
     align-items: center;
     border-radius: 5px;
     cursor: pointer;
+    margin-top: .5rem;
 }
 
 .acp-color-btn:hover {
@@ -102,7 +104,7 @@
 }
 
 .acp-color-btn.acp-active {
-    transform: scale(1.5);
+    transform: scale(1.2);
 }
 
 .acp-controls {
@@ -175,7 +177,7 @@
 }
 
 .acp-width-indicator {
-    top: -0px;
+    top: 8px;
     left: 40%;
     transform: translateX(-50%);
 }
